dev/filecom/De pegjs parciales a pegjs/in/json.pegjs
json_value = json_object / json_array / json_string / json_number / json_true / json_false / json_null 
json_object = "{" json_space m:json_members? json_space "}" { return m }
json_members = m1:json_member mN:json_coma_member* { return {...m1, ...Object.assign({},...mN) } }
json_coma_member = json_space "," json_space m:json_member { return m }
json_member = key:(json_string/js_variable_name) json_space ":" json_space value:json_value { return {[key]: value}}
json_array = "[" json_space e:json_elements? json_space "]" { return e || [] }
json_elements = e1:json_value eN:json_coma_value* { return [e1, ...eN || []] }
json_coma_value = json_space "," json_space v:json_value { return v }
json_string = '"' t:json_string_char* '"'  { return t.join("") }
json_string_char = json_escape / [^"\\\u0000-\u001F]
json_escape = "\\" ( '"' / "\\" / "/" / "b" / "f" / "n" / "r" / "t" / "u" [0-9a-fA-F]{4})
json_number = "-"? json_integer json_fraction? json_exponent? { return parseFloat(text()) }
json_integer = "0" / [1-9] [0-9]* { return parseInt(text()) }
json_fraction = "." [0-9]+
json_exponent = [eE] [+-]? [0-9]+
json_true = "true" { return true }
json_false = "false" { return false }
json_null = "null" { return null }
js_variable_name = [A-Za-záéíóúàèìòù$_] [A-Za-z0-9áéíóúàèìòù$_]* { return text() }
json_space = [ \t\n\r]*
